# particle-life-engine

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Doxyfile  README.md  README_8md.html  annotated.html  annotated_dup.js  classComputePipeline-members.html  classComputePipeline.html  classComputePipeline.js  classGraphicsPipeline-members.html  classGraphicsPipeline.html  classGraphicsPipeline.js  classParticleSystem-members.html  classParticleSystem.html  classParticleSystem.js  classVulkanContext-members.html  classVulkanContext.html  classVulkanContext.js  classes.html  compute__pipeline_8cpp.html  compute__pipeline_8h.html  compute__pipeline_8h.js  compute__pipeline_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_vars.html  graphics__pipeline_8cpp.html  graphics__pipeline_8h.html  graphics__pipeline_8h.js  graphics__pipeline_8h_source.html  (+38 more)
.github/workflows/: build.yml  docker.yml  docs.yml
docs/: architecture.md  development.md  getting-started.md  index.md  simulation.md
docs/stylesheets/: terminal.css
search/: all_1.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_4.js  classes_5.js  defines_0.js  files_0.js  files_1.js  files_3.js  files_5.js  files_6.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  namespaces_0.js  pages_0.js  (+15 more)
shaders/: particle.comp  particle.frag  particle.vert
src/: application.cpp  application.h  compute_pipeline.cpp  compute_pipeline.h  graphics_pipeline.cpp  graphics_pipeline.h  main.cpp  math_utils.h  particle_system.cpp  particle_system.h  shader_utils.cpp  shader_utils.h  vulkan_context.cpp  vulkan_context.h
tests/: test_math_utils.cpp  test_particle_system.cpp
